Collapse fix

--- a/css/style.css
+++ b/css/style.css
@@ -746,6 +746,24 @@ h3{
     margin-top: 20px;
 }
 
+.department .c-collapse:not(.show) {
+   display: none;
+}
+
+.department .c-collapse.show {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
 .department .teammate-figure > img {
     border-radius: 75px;
     border: 4px solid #1399D6;
@@ -763,16 +781,7 @@ h3{
     font-size: 16px;
 }
 
-.teammate-name{
-	margin-bottom: 8px;
-}
 
-.department{
-display:none;
 
-}
 
-.department.active{
-display: flex;
-}
 
